# Inbox0

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-refresh.yml
docs/decisions/: 001-email-caching-strategy.md  002-parallelization-strategy.md  003-email-response-classification.md  004-idempotent-write-retry-strategy.md
reports/: adr001_token_growth.csv
src/agent/: agent.py
src/eval/: app_mode.py  shadow_gmail_writer.py
src/gmail/: gmail_authenticator.py  gmail_reader.py  gmail_writer.py
src/models/: agent_schemas.py  gmail.py  metric_events.py  slack.py  toolfunction.py
src/rag/: redis_store.py
src/slack_handlers/: draft_approval_handler.py  slack_authenticator.py  workflow_bridge.py
src/utils/: json_formatter.py  load_env.py  metric_recorder.py  settings.py  usage_tracker.py
src/workflows/: factory.py  state_manager.py  workflow.py  workflow_factory.py
tests/: conftest.py
tests/agent/: test_agent.py  test_agent_schemas.py
tests/fixtures/: email_datasets.py
tests/gmail/: test_gmail_reader.py  test_gmail_writer.py
tests/logging/: test_draft_approval_handler_logging.py  test_main_logging_setup.py  test_slack_routes.py
tests/routes/: test_flask_routes.py  test_slack_routes.py  test_slack_routes_validation.py
tests/slack_handlers/: test_workflow_bridge.py
tests/utils/: test_load_env.py
tests/workflows/: test_create_draft_responses.py  (+6 more)
(+12 files in other folders)
